<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Journal App</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="add_entry">Add Entry</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="my_journal">My Journal</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
</resources>