<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Root layout for the Add/Edit Entry Activity -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Title EditText -->
        <!-- Input field for the journal entry title -->
        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="377dp"
            android:layout_height="84dp"
            android:layout_margin="16dp"
            android:layout_marginTop="76dp"
            android:hint="@string/title"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Content EditText -->
        <!-- Input field for the journal entry content -->
        <EditText
            android:id="@+id/editTextContent"
            android:layout_width="379dp"
            android:layout_height="191dp"
            android:layout_margin="16dp"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@id/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTitle"
            app:layout_constraintVertical_bias="0.045" />

        <!-- Save Button -->
        <!-- Button to save the journal entry -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>